--- a/Tuan_1/app/src/main/res/drawable/btn_bg.xml
+++ b/Tuan_1/app/src/main/res/drawable/btn_bg.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-  <solid android:color="#f5f5f5"/>
-  <corners android:radius="8dp"/>
+    <solid android:color="#F5F5F5" />
+    <corners android:radius="8dp" />
 </shape>
