--- a/Tuan_1/app/src/main/res/layout/activity_main.xml
+++ b/Tuan_1/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#FFFFFF"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp"
+        android:gravity="center_vertical">
 
-        <ImageView
-            android:id="@+id/imageView3"
+        <ImageButton
+            android:id="@+id/btnBack"
             android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_back"
-            android:background="@drawable/ic" />
+            android:layout_height="32dp"
+            android:background="@drawable/btn_bg"
+            android:padding="8dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_back" />
 
         <View
-            android:id="@+id/view"
-            android:layout_width="334dp"
-            android:layout_height="40dp"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
             android:layout_weight="1"
             android:visibility="invisible" />
 
-        <ImageView
-            android:id="@+id/imageView2"
+        <ImageButton
+            android:id="@+id/btnEdit"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_edit"
-            android:background="@drawable/ic"/>
+            android:background="@drawable/btn_bg"
+            android:padding="8dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_edit" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -43,23 +51,31 @@
             android:id="@+id/avatarImage"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:src="@drawable/avatar"
-            android:background="@drawable/circle"/>
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/circle_background"
+            android:padding="20sp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/avatar" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/nameText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Đoàn Anh Tuấn"
             android:textColor="#000000"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/locationText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Bình Định, Việt Nam" />
+            android:text="Bình Định, Việt Nam"
+            android:textColor="#666666"
+            android:textSize="16sp" />
+
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
